fix: navbar overflow bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,10 @@
   --tert: #64ab47;
   --faint:#000000b3;
 }
+body{
+  max-width: 100vw;
+  overflow-x:hidden;
+}
 .vidaloka {
   font-family: "Vidaloka", serif;
 }
